Newsfeed post for mobile screen and fix comment collapse

--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -449,20 +449,20 @@ a, .btn-link {
 		    	display: block;
 		    	text-decoration: none;
 	    		color: $c-white;
-				padding: 32px 20px;
+				padding: 30px 20px;
 				width: 75px;
-				height: 90px;
+				height: 82px;
 	    		> img {
-	    			width: 35px;
-					@include position(absolute, $top: 27px, $left: 20px);
+	    			width: 28px;
+					@include position(absolute, $top: 32px, $left: 24px);
 					@include transition(all .3s);
 					&.bars-icon {
 
 					}
 					&.close-icon {
-						width: 28px;
-					    top: 25px;
-					    left: 24px;
+						width: 24px;
+					    top: 30px;
+					    left: 25px;
 					    @include transform(scale(0));
 					}
 	    		}
@@ -1088,6 +1088,18 @@ a, .btn-link {
 			    	display: block;
 			    }
 			}
+			.share { 
+				.popover.top {
+					min-width: 300px; 
+				    margin-left: -100px;  
+					.popover-content {
+						padding: 0px; 
+						.share-arrow { 
+						    left: 73.5%; 
+						}
+					}
+				}
+			}
 		}
 		> .card-body {
 			padding: 0px 20px;
@@ -1133,6 +1145,51 @@ a, .btn-link {
 		}
 		> .card-footer {
 			padding: 0px 20px 50px; 
+			.comments {
+				&.comments-form {
+					.form-inline {
+						.form-control {
+							width: 100%;
+						}
+						.btn-primary {
+							float: right;
+						}
+					}
+				}
+			}
+			.btn-more-comments {
+				left: 0px;
+			    right: 0px;
+			    bottom: 0px;
+			    text-align: center;
+			    > a {
+			    	opacity: 0;
+			    	margin: 0 auto 10px;
+			    	transition: all .3s;
+			    	@include position(absolute, $left: 0px, $right: 0px, $bottom: 0px);
+			    }
+			    > a.dot-icon{
+			    	opacity: 1;
+				    width: 100%;
+				    height: 50px;
+				    border: 0px;
+				    border-radius: 0px;
+				    padding: 15px;
+				    margin: 0px;
+				    &:hover, &:active {
+				    	background-color: transparent;
+				    }
+			    }
+			    &.active {
+			    	> a {
+			    		opacity: 1;
+			    		margin-bottom: 20px;
+			    	}
+			    	> a.dot-icon {
+			    		opacity: 0;
+			    	}
+			    }
+			}
 		}
 	}
 }
